# framework-engine

./: CMakeLists.txt  LICENSE  README.md  run
inc/: noise.h  voxel.h
inc/ansi/: ansi-color-codes.h
inc/demo/: pipeline.h
inc/fe/: err.h  err.hpp  glfw_callbacks.h  glfw_callbacks.hpp  glinfo.h  glinfo.hpp  logger.h  logger.hpp  scene.h  scene.hpp
lib/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
resources/: default_fragment.glsl  default_vertex.glsl
src/: glfw_callbacks.c  glfw_callbacks.cpp  logger.c  logger.cpp  main.c  main.cpp
